--- a/src/main/webapp/manterCliente.xhtml
+++ b/src/main/webapp/manterCliente.xhtml
@@ -131,7 +131,8 @@
 				<p:commandButton value="Abrir Conta" 
 					process="@this"
 					update="@form"
-					oncomplete="PF('dlgCriarConta').show()" />
+					oncomplete="PF('dlgCriarConta').show()" >
+					</p:commandButton>
 				<p:commandButton value="Depósito" disabled="true"/>
 				<p:commandButton value="Saque" disabled="true"/>
 				<p:commandButton value="Transferência" disabled="true"/>			
