--- a/src/main/webapp/manterCliente.xhtml
+++ b/src/main/webapp/manterCliente.xhtml
@@ -78,6 +78,7 @@
 		<ui:include src="/dialogOperacoesBancarias.xhtml" />
 		<ui:include src="/dialogSaque.xhtml" />
 		<ui:include src="/dialogDeposito.xhtml" />		
+		<ui:include src="/dialogTransferencia.xhtml" />
 		
 		</h:form>
 		
