--- a/src/main/webapp/dialogAbrirConta.xhtml
+++ b/src/main/webapp/dialogAbrirConta.xhtml
@@ -27,7 +27,7 @@
 					process="dlg-criar-conta"
 					update="@form"
 					oncomplete="if(!args.validationFailded) PF('dlgCriarConta').hide() ">
-					<f:setPropertyActionListener value="#{manterClienteBean.clienteSelecionado}" target="#{operacoesBancariasBean.clienteSelecionado}"></f:setPropertyActionListener>
+					<f:setPropertyActionListener value="#{manterClienteBean.clienteSelecionado}" target="#{operacoesBancariasBean.clienteSelecionado}" />
 				</p:commandButton>
 				<p:commandButton value="Cancelar" />
 				
