--- a/src/main/webapp/dialogDeposito.xhtml
+++ b/src/main/webapp/dialogDeposito.xhtml
@@ -25,11 +25,13 @@
 			
 			<h:panelGrid columns="2" cellpadding="10">
 			
-				<p:commandButton value="Ok" actionListener="#{operacoesBancariasBean.efetuarDeposito()}"> 
-				</p:commandButton>
+				<p:commandButton value="Ok" 
+					actionListener="#{operacoesBancariasBean.efetuarDeposito()}"
+					process="dlg-deposito"
+					update="@form"
+					oncomplete="if(!args.validationFailded) PF('dlgDeposito').hide() " />
 				
-				<p:commandButton value="Cancelar">
-				</p:commandButton>
+				<p:commandButton value="Cancelar" oncomplete="if(!args.validationFailded) PF('dlgDeposito').hide()" />
 				
 			</h:panelGrid>
 			
